[gd_scene load_steps=2 format=3 uid="uid://ddcf6iglfl4ym"]

[ext_resource type="Script" path="res://addons/repl/repl_control.gd" id="1"]

[node name="REPLControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="output" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
offset_right = 1600.0
offset_bottom = 865.0
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
text = "Welcome.
Please type a GDScript Expression below and type Enter.

"
scroll_following = true
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_top = 869.0
offset_right = 1600.0
offset_bottom = 900.0
size_flags_horizontal = 3

[node name="input" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_right = 1556.0
offset_bottom = 31.0
size_flags_horizontal = 3
caret_blink = true

[node name="import" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
offset_left = 1446.0
offset_right = 1556.0
offset_bottom = 31.0
text = "Import scene"

[node name="eval" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_left = 1560.0
offset_right = 1600.0
offset_bottom = 31.0
text = "Eval"

[node name="import_filedialog" type="FileDialog" parent="."]

[connection signal="gui_input" from="VBoxContainer/HBoxContainer/input" to="." method="_on_input_gui_input"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/import" to="." method="_on_import_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/eval" to="." method="_on_eval_pressed"]
[connection signal="file_selected" from="import_filedialog" to="." method="_on_import_filedialog_file_selected"]
